--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
 	<meta charset="UTF-8">
 	<title>Foro Bunny</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+	<header class="container">
+		<div class="row">
+			<div class="col offset-s2 s8">
+				<h1>Foro Sobre Conejitos</h1>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col offset-s2 s8">
+				<form action="">
+					<label>Nombre: </label>
+					<input type="text" id="nombre">
+					<label>Mensaje: </label>
+					<textarea id="mensaje"></textarea>
+					<button>Enviar</button>
+				</form>
+			</div>
+		</div>
+	</header>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
 	<script src="js/main.js"></script>
