--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
 			</div>
 		</div>
 	</header>
+	<section class="container">
+		<div class="col offset-s3 s6">
+			<div id="comentarios">
+				<!-- Aquí van los comentarios -->
+			</div>
+		</div>
+	</section>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
 	<script src="js/main.js"></script>
